商品頁頁籤增加

--- a/probioticsproduct.html
+++ b/probioticsproduct.html
@@ -117,9 +117,17 @@
                     </div>
                 </div>
             </div>
-            <div class="productpage-content">
+             <div class="tabs">
+            <ul class="tab-buttons">
+                <li><button class="active" data-tab="#tab1">商品介紹</button></li>
+                <li><button data-tab="#tab2">常見問題</button></li>
+                <li><button data-tab="#tab3">詳細規格</button></li>
+            </ul>
+
+            <div class="tab-content active" id="tab1">
                 <h2>vitaC綜合益生菌：為您的腸道注入純粹活力</h2>
                 <p>您的腸道，是維持全身機能的關鍵樞紐。當好菌與壞菌達到和諧平衡，身體自然充滿活力。vitaC 綜合益生菌 以簡約純粹的配方，結合多種優勢菌株、專利保護技術與益生質，溫和呵護您的腸道健康，讓您由內而外煥發健康光彩。</p>
+                </br>
                 <h2>產品特色：</h2>
                     <ul>
                         <li>多元優勢菌株，共築健康防線： 我們嚴選多種對人體有益的活性益生菌，包含：
@@ -136,36 +144,41 @@
                         <li>小分子技術，吸收更有效率：我們採用先進的小分子技術，將益生菌活性成分細化，使其更容易被腸道吸收利用，提升保健效果。</li>
                         <li>常溫保存，隨時補充好菌：本產品採用特殊技術，無需冷藏，方便您隨身攜帶，隨時隨地補充好菌，維持腸道健康。</li>
                     </ul>
-                    <h2>益生菌常見問題 Q&A：</h2>
-                    <p>Q：益生菌什麼時候吃最好？</p>
+            </div>
+            <div class="tab-content" id="tab2">
+                <h2>益生菌常見問題 Q&A：</h2>
+                    <h3>Q：益生菌什麼時候吃最好？</p>
                     <p>A： 建議空腹或睡前食用，避開胃酸影響，幫助益生菌順利抵達腸道。部分產品亦有特殊建議，請參考產品標示</p>
-                    <p>Q：益生菌需要冰嗎？</p>
+                    <h3>Q：益生菌需要冰嗎？</p>
                     <p>A： 多數益生菌產品建議存放於陰涼乾燥處即可，部分特殊菌株或劑型可能需要冷藏，請依照產品標示說明保存。
                     </p>
-                    <p>Q：吃益生菌會有副作用嗎？</p>
+                    <h3>Q：吃益生菌會有副作用嗎？</p>
                     <p>A： 少數人在初期可能會有輕微脹氣或排氣等調整反應，通常幾天後會逐漸緩解。若不適感持續，建議暫停使用並諮詢專業人士。</p>
-                    <p>Q：孕婦或小孩可以吃益生菌嗎？</p>
+                    <h3>Q：孕婦或小孩可以吃益生菌嗎？</p>
                     <p>A： 一般情況下孕婦和小孩可以食用益生菌，但建議選擇適合其年齡層的產品，並在諮詢醫師或藥師後使用更佳。</p>
-                    <p>Q：益生菌要吃多久才有效？</p>
+                    <h3>Q：益生菌要吃多久才有效？</p>
                     <p>A： 益生菌的保健效果因人而異，通常需要持續食用一段時間才能感受到變化，建議至少持續食用 1-3 個月。</p>
-                    <p>Q：益生菌菌數越高越好嗎？</p>
+                    <h3>Q：益生菌菌數越高越好嗎？</p>
                     <p>A： 並非如此，重點在於菌株的種類與活性，以及是否能順利抵達腸道定殖。選擇適合自身需求的優質菌株更重要。</p>
-                    <p>Q：益生菌可以和藥物一起吃嗎？</p>
+                    <h3>Q：益生菌可以和藥物一起吃嗎？</p>
                     <p>A： 益生菌與多數藥物沒有直接衝突，但為避免影響藥效，建議間隔 1-2 小時以上食用，或諮詢醫師或藥師。</p>
-                    <p>Q：為什麼我的益生菌吃起來沒感覺？</p>
+                    <h3>Q：為什麼我的益生菌吃起來沒感覺？</p>
                     <p>A： 可能原因包括食用時間不對、劑量不足、菌株不適合個人體質，或腸道菌群失衡嚴重，建議調整食用方式或選擇其他產品。</p>
-                    <p>Q：益生菌可以幫助排便嗎？</p>
+                    <h3>Q：益生菌可以幫助排便嗎？</p>
                     <p>A： 部分益生菌具有促進腸道蠕動、增加糞便體積的作用，有助於改善排便不順暢的情況。</p>
-                    <p>Q：益生菌除了幫助消化還有其他功效嗎？</p>
+                    <h3>Q：益生菌除了幫助消化還有其他功效嗎？</p>
                     <p>A： 是的，部分益生菌經研究證實具有調整體質、提升保護力、維持菌叢平衡等多重健康益處。</p>
-                    <h2>商品規格</h2>
+                    
+            </div>
+            <div class="tab-content" id="tab3">
+                <h2>商品規格</h2>
                     <p>主要成分：副乾酪乳桿菌、鼠李糖乳桿菌、嗜酸乳桿菌、比菲德氏龍根菌、菊苣纖維 (益生元)</p>
                     <p>內容量： 30 包/盒，每包 2 公克</p>
                     <p>建議用量： 每日 1 包，可直接撕開食用或搭配常溫水或飲品食用。</p>
                     <p>保存期限： 一年</p>
                     <p>原產地： 台灣</p>
                     <p>保存方法： 請置於陰涼乾燥處，避免陽光直射。開封後請儘速食用完畢。</p>
-                    <h3>注意事項：</h3>
+                <h2>注意事項：</h2>
                     <ul class="caution">
                         <li>本產品含有牛奶及甲殼類製品，不適合對其過敏體質者食用。</li>
                         <li>請洽詢醫師或營養師有關食用本品之意見</li>
@@ -173,6 +186,7 @@
                         <li>本產品供保健用，請依建議攝取量食用</li>
                     </ul>
             </div>
+        </div>
         </section>
 <!-- footer-start -->
         <div class="container-large">
@@ -214,6 +228,7 @@
                 </div>
             </footer>
         </div>
+        <script src="jquery3.7.1.js"></script>
         <script src="all.js"></script>
     </body>
 </html>
