--- a/fishoilproduct.html
+++ b/fishoilproduct.html
@@ -205,6 +205,7 @@
                 </div>
             </footer>
         </div>
+        <script src="jquery3.7.1.js"></script>
         <script src="all.js"></script>
     </body>
 </html>
