index salesection link change

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         <div class="container">
             <section class="sale-section">
                 <div class="birthday-sale">
-                    <a href="#"><img src="picture/vitacbirthdaysale.jpg" alt="vitac生日優惠"></a>
+                    <a href="product-list-all.html"><img src="picture/vitacbirthdaysale.jpg" alt="vitac生日優惠"></a>
                 </div>
                 
                 <div class="summer-sale">
-                    <a href="#"><img src="picture/summersale.jpg" alt="vitac夏日優惠"></a>
+                    <a href="product-list-vitaminc.html"><img src="picture/summersale.jpg" alt="vitac夏日優惠"></a>
                 </div>
                 <div class="festival-sale">
-                    <a href="#"><img src="picture/festivalbanner.jpg" alt="vitac端午優惠"></a>
+                    <a href="product-list-Probiotics.html"><img src="picture/festivalbanner.jpg" alt="vitac端午優惠"></a>
                 </div>
             </section>
         </div>
