h1跟描述調整

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>vitaC 健康知識專區</title>
-        <meta name="description" content="vitaC ">
+        <meta name="description" content="vitaC 專業營養師團隊，教你了解這健康知識專業營養師團隊">
         <link rel="icon" href="picture/logo.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="grid.css">
@@ -74,6 +74,8 @@
         </div>
 <!-- breadcrumb-end -->
         <section class="container">
+            <h1>健康知識專區</h1>
+        </br>
             <div class="article-list">
                 <div class="article-card">
                     <div class="pic">
