--- a/product-list-Probiotics.html
+++ b/product-list-Probiotics.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>vita C 綜合益生菌推薦</title>
-        <meta name="description" content="">
+        <meta name="description" content="vita C 綜合益生菌推薦,保護你的腸道健康">
         <link rel="icon" href="picture/logo.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="grid.css">
@@ -75,6 +75,8 @@
         </div>
 <!-- breadcrumb-end -->
         <section class="container main">
+            <h1>益生菌推薦</h1>
+        </br>
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col col-3">
                     <div class="card product-list-card">
