--- a/product-list-fishoil.html
+++ b/product-list-fishoil.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>vita C 頂級魚油膠囊推薦</title>
-        <meta name="description" content="">
+        <meta name="description" content="vita C 頂級魚油膠囊推薦，給你最安心的選擇">
         <link rel="icon" href="picture/logo.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="grid.css">
@@ -75,6 +75,8 @@
         </div>
 <!-- breadcrumb-end -->
         <section class="container main">
+            <h1>魚油推薦</h1>
+        </br>
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col col-3">
                     <div class="card product-list-card">
