--- a/feedback-list.html
+++ b/feedback-list.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>vitaC 顧客好評</title>
-        <meta name="description" content="">
+        <meta name="description" content="vitaC 顧客好評好，的產品值得你一再回購">
         <link rel="icon" href="picture/logo.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="grid.css">
