--- a/fishoilproduct.html
+++ b/fishoilproduct.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vita C 頂級魚油膠囊 30粒/罐</title>
-    <meta name="description" content="">
+    <meta name="description" content="現代人長時間用腦、工作壓力大，心血管與腦部健康更需要用心維護。vitaC 深海魚油膠囊嚴選高純度 Omega-3，富含 DHA 與
+                    EPA，搭配分子蒸餾技術與無腥味設計，提供安心、純淨、好吸收的日常補充。從用腦清晰到心臟保養，讓您每日補對油，健康不缺席。">
     <link rel="icon" href="picture/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="grid.css">
