--- a/product-list-all.html
+++ b/product-list-all.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>vita C 所有商品</title>
-        <meta name="description" content="">
+        <meta name="description" content="vita C 提供你最多且最健康的保健食品選擇">
         <link rel="icon" href="picture/logo.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="grid.css">
