feedback-list 微調

--- a/feedback-list.html
+++ b/feedback-list.html
@@ -138,7 +138,7 @@
                         <div class="content">
                             <img id="starsicon" src="picture/stars.svg" alt="">
                             <h3>vitaC 頂級魚油推薦</h3>
-                            <p>今年58歲，身體有些變化後開始補充vitaC的魚油，約三個月後，日常的不適感減少，睡眠品質也有所提升。現在每天固定攝取...
+                            <p>今年58歲，身體開始有變化後補充vitaC的魚油，約三個月後，日常不適感減少，睡眠品質也有所提升...
                             </p>
                         </div>
                     </div>
