--- a/aboutus.html
+++ b/aboutus.html
@@ -90,7 +90,7 @@
             <div class="each-nutritionist">
                 <div class="nutritionist-pic">
                     <img src="picture/nutritionistimg/nutritionist2.jpg" alt="營養師Gary">
-                    <p>Gray</p>
+                    <p>Danny</p>
                 </div>
                 <div class="nutritionist-pic">
                     <img src="picture/nutritionistimg/nutritionist4.jpg" alt="營養師Candice">
