--- a/aboutus.html
+++ b/aboutus.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="nutritionist-pic">
                     <img src="picture/nutritionistimg/nutritionist1.jpg" alt="營養師Jason">
-                    <p>Jason</p>
+                    <p>Eason</p>
                 </div>
             </div>
             <div class="about-us-second-section">
