調整addtocart跟輪播icon

--- a/fishoilproduct.html
+++ b/fishoilproduct.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="btns">
                     <a href="cart-list.html"><button class="buybtn">立即購買</button></a>
-                    <button class="addtocartbtn">
+                    <button class="addtocartbtn add-to-cart">
                         <span class="addtocartbtn-icon"><svg width="26" height="25" viewBox="0 0 26 25" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
