--- a/index.html
+++ b/index.html
@@ -12,23 +12,26 @@
     <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
+    <link rel="stylesheet" href="fontawesome/css_fontawesome/all.min.css">
     <style>
         .slick-prev:before {
-            content: '<';
+            content: "\f104";
+            font-family: "Font Awesome 6 Free";
             font-size: 35px;
             left: -25px;
             z-index: 1;
             color: #23704D;
-            font-weight: bold;
+            font-weight: 900;
         }
 
         .slick-next:before {
-            content: '>';
+            content: "\f054";
+            font-family: "Font Awesome 6 Free";
             font-size: 35px;
             left: 0;
             z-index: 1;
             color: #23704D;
-            font-weight: bold;
+            font-weight: 900;
         }
 
         .slick-dotted.slick-slider {
