--- a/product-list-all.html
+++ b/product-list-all.html
@@ -65,8 +65,7 @@
                 </button>
         </header>
 <!-- nav-end -->
- <!-- banner-start -->
-  <!--  banner-end -->
+
 <!-- breadcrumb -->
         <div class="breadcrumb" aria-label="breadcrumb">
             <ol>
@@ -89,7 +88,7 @@
                             <p>$ 1300</p>
                         </div>
                         <div class="addtocarticon">
-                            <button><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
+                            <button class="add-to-cart"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
                         </div>
                     </div>
                 </div>
@@ -103,7 +102,7 @@
                             <p>$ 1700</p>
                         </div>
                         <div class="addtocarticon">
-                            <button><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
+                            <button class="add-to-cart"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
                         </div>
                     </div>
                 </div>
@@ -117,7 +116,7 @@
                             <p>$ 1500</p>
                         </div>
                         <div class="addtocarticon">
-                            <button><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
+                            <button class="add-to-cart"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
                         </div>
                     </div>
                 </div>
@@ -131,7 +130,7 @@
                             <p>$ 900</p>
                         </div>
                         <div class="addtocarticon">
-                            <button><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
+                            <button class="add-to-cart"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
                         </div>
                     </div>
                 </div>
@@ -145,7 +144,7 @@
                             <p>$ 500</p>
                         </div>
                         <div class="addtocarticon">
-                            <button><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
+                            <button class="add-to-cart"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
                         </div>
                     </div>
                 </div>
@@ -159,7 +158,7 @@
                             <p>$ 1800</p>
                         </div>
                         <div class="addtocarticon">
-                            <button><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
+                            <button class="add-to-cart"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
                         </div>
                     </div>
                 </div>
