--- a/product-list-fishoil.html
+++ b/product-list-fishoil.html
@@ -88,7 +88,7 @@
                             <p>$ 1700</p>
                         </div>
                         <div class="addtocarticon">
-                            <button><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
+                            <button class="add-to-cart"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                             <p>$ 2200</p>
                         </div>
                         <div class="addtocarticon">
-                            <button><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
+                            <button class="add-to-cart"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
                         </div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                             <p>$ 2500</p>
                         </div>
                         <div class="addtocarticon">
-                            <button><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
+                            <button class="add-to-cart"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></button>
                         </div>
                     </div>
                 </div>
